--- a/src/assets/css/sass/main.scss
+++ b/src/assets/css/sass/main.scss
@@ -1,10 +1,25 @@
-@import "./_mixins.scss";
-@import "./_gogo.style.scss";
-@import "./_plugins.scss";
+@import './_mixins.scss';
+@import './_gogo.style.scss';
+@import './_plugins.scss';
+@import './custom/_landing.scss';
 
 /** your custom css code **/
 /* 
 html {
     background-color: $theme-color-1 !important;
 }
-*/ 
+*/
+.landing-page .landing-page-nav .navbar-logo {
+  width: 340px;
+  height: 74px;
+}
+
+.landing-page .landing-page-nav .navbar-logo .white {
+  width: 340px;
+  height: 74px;
+}
+
+.landing-page .landing-page-nav .navbar-logo .dark {
+  width: 340px;
+  height: 74px;
+}
