--- a/src/assets/css/sass/main.scss
+++ b/src/assets/css/sass/main.scss
@@ -23,3 +23,26 @@ html {
   width: 340px;
   height: 74px;
 }
+.heading-people {
+  font-size: 3rem;
+  line-height: 3.2rem;
+  margin-bottom: 1.1em;
+  color: #fff;
+  font-weight: 300;
+}
+.about-row {
+  margin-bottom: 16px;
+}
+
+.landing-page .landing-page-nav .navbar-nav .nav-item > a,
+.landing-page .landing-page-nav .navbar-nav .nav-item > .dropdown > a {
+  color: #fff;
+  font-family: Nunito, sans-serif;
+  font-size: 0.9rem;
+  display: inline-block;
+  margin-top: 0;
+}
+
+.landing-page .landing-page-nav .headroom--pinned .navbar-nav a {
+  color: #3a3a3a;
+}
