--- a/src/assets/css/sass/main.scss
+++ b/src/assets/css/sass/main.scss
@@ -46,3 +46,7 @@ html {
 .landing-page .landing-page-nav .headroom--pinned .navbar-nav a {
   color: #3a3a3a;
 }
+.navbar .navbar-logo {
+  width: 100%;
+  height: 100%;
+}
