--- a/src/assets/css/sass/themes/gogo.light.purplemonster.scss
+++ b/src/assets/css/sass/themes/gogo.light.purplemonster.scss
@@ -37,8 +37,8 @@ $shadow-offsets-bottom: 1 3 6 10 15;
 $shadow-blurs-bottom: 3 6 6 5 6;
 $shadow-opacities-bottom: 0.04 0.1 0.2 0.22 0.22;
 
-$logo-path: '/assets/logos/black.svg';
-$logo-path-mobile: '/assets/logos/mobile.svg';
+$logo-path: '/assets/logos/logo.png';
+$logo-path-mobile: '/assets/logos/logo.png';
 
 $lp-logo-path: '/assets/logos/logo.png';
 $lp-logo-path-pinned: '/assets/logos/logo.png';
