--- a/src/assets/css/sass/custom/_landing.scss
+++ b/src/assets/css/sass/custom/_landing.scss
@@ -39,3 +39,9 @@
   width: 100%;
   height: 100%;
 }
+.need-search-heading {
+  font-size: 24px;
+}
+.need-search-sub-heading {
+  font-size: 18px;
+}
